force-app/main/default/objects/NI_Global_Acceptance_Criterion__c/NI_Global_Acceptance_Criterion__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-018290

Used to capture acceptance criteria for NI Project Backlog records</description>
    <label>Global Acceptance Criterion</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Acceptance Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Acceptance Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>