force-app/main/default/objects/NI_Global_Acceptance_Criterion__c/fields/Applicable_Object__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Object__c</fullName>
    <label>Applicable Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_List</valueSetName>
    </valueSet>
</CustomField>