force-app/main/default/objects/NI_Global_Acceptance_Criterion__c/fields/Given__c.field-meta.xml
<CustomField>
    <fullName>Given__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>&quot;Given&quot;  statement of the acceptance criterion logic.  These are the conditions that must be met in order to initiate the acceptance criterion.  For example:  &quot;Given that I am logged in as System Admin...&quot;</inlineHelpText>
    <label>Given</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>