force-app/main/default/objects/NI_Global_Acceptance_Criterion__c/fields/Then__c.field-meta.xml
<CustomField>
    <fullName>Then__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>&quot;Then&quot; statement of the acceptance criterion.  This is what the outcome should be</inlineHelpText>
    <label>Then</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>