force-app/main/default/objects/NI_Global_Acceptance_Criterion__c/listViews/All_Criterion.listView-meta.xml
<ListView>
    <fullName>All_Criterion</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Applicable_Object__c</columns>
    <columns>Given__c</columns>
    <columns>When__c</columns>
    <columns>Then__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Criterion</label>
</ListView>