force-app/main/default/objects/NI_Global_Acceptance_Criterion__c/listViews/Bill_Anllo.listView-meta.xml
<ListView>
    <fullName>Bill_Anllo</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Created This Week</label>
</ListView>